# pizh2312_madaev

./: money_collection.json
Avtomat/DIP/Lab1/: CMakeLists.txt  LabWorkC++1.cpp
Avtomat/OPC, LCP, ISP/Player/: audioplayer.py  dvdplayer.py  main.py  player.py  videoplayer.py
Avtomat/SRP/Snake/: apple.py  input.py  main.py  renderers.py  snake.py
Avtomat/SRP/Snake/tests/: test_main.py
LabWorkC++2/lib/: number.cpp  number.h
LabWorkC++3/: CMakeLists.txt  bmpTest.cpp
LabWorkC++4/lib/: ArgParser.cpp
LabWorkC++5/: CMakeLists.txt
LabWorkC++7/: CMakeLists.txt
LabWorkC++7/lib/: MP3Parser.cpp  MP3Parser.h
LabWorkC++7/tests/: test_parser.cpp
LabWorkC++8/: CMakeLists.txt
LabWorkC++9/: CMakeLists.txt
LabWorkC++_1/: LabWorkC++1.cpp  README.md  text.txt
Snake/: README.md  apple.py  game.py  main.py  snake.py
Snake/tests/: test_main.py
week_2/: README.md  VectorUML.xml  main.py  module.py
week_3/: README.md
week_3/Pizza/: main.py  module.py
week_3/Roman/: RomanUML.xml  mian.py  module.py
week_4/: README.md  money.json
week_4/Bank/: deposit.py  depositManager.py  deposits.py  main.py  module.py
week_4/Money/: main.py  module.py
week_5/: README.md
week_5/MoneyCollection/: main.py  money.py  moneyCollection.py
week_5/Player/: audioplayer.py  dvdplayer.py  main.py  player.py  videoplayer.py
